rework execute use case.
This use case need to be renamed to Eval
