# infrastructure/src/main/webui/src/api/model/index.ts
@@ -22,3 +22,4 @@ export * from "./validate200";
 export * from "./validateBody";
 export * from "./validation";
 export * from "./zonedDateTime";
+export * from "./intermediateResult";
